[gd_scene load_steps=11 format=2]

[ext_resource path="res://rules/scripts/misc/matchmaking/matchmaking.gd" type="Script" id=1]
[ext_resource path="res://rules/scripts/misc/matchmaking/server_list.gd" type="Script" id=2]
[ext_resource path="res://entities/resources/misc/player_icon.png" type="Texture" id=3]
[ext_resource path="res://rules/resources/themes/menu.tres" type="Theme" id=4]
[ext_resource path="res://rules/scripts/misc/matchmaking/server_item.gd" type="Script" id=5]
[ext_resource path="res://rules/resources/themes/gui/refresh.png" type="Texture" id=6]
[ext_resource path="res://rules/resources/themes/gui/sfx/menu_click.ogg" type="AudioStream" id=7]
[ext_resource path="res://rules/scripts/misc/sfx/menu_button.gd" type="Script" id=8]
[ext_resource path="res://rules/resources/themes/gui/sfx/option.ogg" type="AudioStream" id=9]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 50, 50 )

[node name="Matchmaking" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Server_Item" type="Button" parent="."]
visible = false
margin_left = 290.95
margin_top = 80.0
margin_right = 670.95
margin_bottom = 105.0
rect_min_size = Vector2( 0, 25 )
text = "KAG Server"
align = 0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Server_List" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -199.05
margin_top = -200.0
margin_right = 200.95
margin_bottom = 200.0
theme = ExtResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
server_item = NodePath("../Server_Item")

[node name="Layout" type="ScrollContainer" parent="Server_List"]
margin_left = 8.0
margin_top = 8.0
margin_right = 392.0
margin_bottom = 392.0

[node name="Content" type="VBoxContainer" parent="Server_List/Layout"]
margin_right = 384.0
margin_bottom = 384.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelHost" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 204.369
margin_top = -200.0
margin_right = 354.369
margin_bottom = -49.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="VBoxContainer" parent="PanelHost"]
margin_left = 8.0
margin_top = 8.0
margin_right = 142.0
margin_bottom = 143.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="PanelHost/Content"]
margin_top = 2.0
margin_right = 134.0
margin_bottom = 15.0
text = "Server name"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtServerName" type="LineEdit" parent="PanelHost/Content"]
margin_top = 19.0
margin_right = 134.0
margin_bottom = 42.0
max_length = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="PanelHost/Content"]
margin_top = 46.0
margin_right = 134.0
margin_bottom = 59.0
text = "Port"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtServerPort" type="LineEdit" parent="PanelHost/Content"]
margin_top = 63.0
margin_right = 134.0
margin_bottom = 86.0
text = "3074"
max_length = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btPrivate" type="CheckButton" parent="PanelHost/Content"]
margin_top = 90.0
margin_right = 134.0
margin_bottom = 106.0
text = "Private server"
script = ExtResource( 8 )
audio_file = ExtResource( 9 )

[node name="btCreate" type="Button" parent="PanelHost/Content"]
margin_top = 110.0
margin_right = 134.0
margin_bottom = 133.0
text = "Host"
script = ExtResource( 8 )
audio_file = ExtResource( 7 )

[node name="PanelJoin" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 204.369
margin_top = -46.0
margin_right = 354.369
margin_bottom = 94.0003
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="VBoxContainer" parent="PanelJoin"]
margin_left = 8.0
margin_top = 8.0
margin_right = 142.0
margin_bottom = 132.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="PanelJoin/Content"]
margin_top = 6.0
margin_right = 134.0
margin_bottom = 19.0
text = "Server IP"
valign = 1

[node name="txtJoinIP" type="LineEdit" parent="PanelJoin/Content"]
margin_top = 23.0
margin_right = 134.0
margin_bottom = 46.0
text = "127.0.0.1"
max_length = 50

[node name="Label3" type="Label" parent="PanelJoin/Content"]
margin_top = 50.0
margin_right = 134.0
margin_bottom = 63.0
text = "Port"
valign = 1

[node name="txtJoinPort" type="LineEdit" parent="PanelJoin/Content"]
margin_top = 67.0
margin_right = 134.0
margin_bottom = 90.0
text = "3074"
max_length = 50

[node name="btJoin" type="Button" parent="PanelJoin/Content"]
margin_top = 94.0
margin_right = 134.0
margin_bottom = 117.0
text = "Join"
script = ExtResource( 8 )
audio_file = ExtResource( 7 )

[node name="Info" type="HBoxContainer" parent="."]
margin_right = 256.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="Panel" parent="Info"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
custom_styles/panel = SubResource( 1 )

[node name="Layout" type="VBoxContainer" parent="Info"]
margin_left = 34.0
margin_right = 256.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username" type="Label" parent="Info/Layout"]
margin_right = 222.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Player name"
valign = 1

[node name="Refresh" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 147.353
margin_top = 146.0
margin_right = 189.353
margin_bottom = 188.0
theme = ExtResource( 4 )
icon = ExtResource( 6 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
audio_file = ExtResource( 7 )
[connection signal="pressed" from="PanelHost/Content/btCreate" to="." method="_on_btCreate_pressed"]
[connection signal="pressed" from="PanelJoin/Content/btJoin" to="." method="_on_btJoin_pressed"]
[connection signal="pressed" from="Refresh" to="Server_List" method="_refresh"]
